<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".RegUser">



<TextView
        android:layout_width="408dp"
        android:layout_height="30dp"
        android:background="@color/lightGrey"
        android:text="@string/TitleReg"
        android:textAlignment="center"
        android:textSize="24dp"
        android:fontFamily="@font/font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/RegName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"

        android:layout_marginStart="75sp"
        android:layout_marginTop="265dp"
        android:background="@color/lightGrey"
        android:ems="50"
        android:fontFamily="@font/font"
        android:hint="@string/EtName"
        android:textAlignment="center"
        android:textColorHint="@color/darkGrey" />

    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="250sp"
        android:layout_height="wrap_content"

        android:layout_marginStart="75sp"
        android:layout_marginTop="300dp"
        android:background="@color/lightGrey"
        android:ems="50"
        android:fontFamily="@font/font"
        android:hint="@string/EtEmail"
        android:textAlignment="center"
        android:textColorHint="@color/darkGrey" />

    <EditText
        android:id="@+id/RegPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegEmail"
        android:layout_marginStart="75sp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGrey"
        android:ems="50"
        android:fontFamily="@font/font"
        android:hint="@string/EtPassword"
        android:textAlignment="center"
        android:textColorHint="@color/darkGrey" />

    <Button
        android:id="@+id/RegBack"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lightGrey"
        android:fontFamily="@font/font"
        android:hint="@string/Back"
        android:textSize="11dp" />

    <Button
        android:id="@+id/RegReg"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/RegPassword"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lightGrey"
        android:fontFamily="@font/font"
        android:hint="@string/Reg"
        android:textSize="11dp" />

</RelativeLayout>