<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    >




    <TextView
        android:layout_width="408dp"
        android:layout_height="30dp"
        android:background="@color/lightGrey"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textSize="24dp"
        android:fontFamily="@font/font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/AuthEmail"
        android:layout_width="250sp"
        android:layout_height="wrap_content"

        android:layout_marginStart="75sp"
        android:layout_marginTop="300dp"
        android:background="@color/lightGrey"
        android:ems="50"
        android:fontFamily="@font/font"
        android:hint="@string/EtEmail"
        android:textAlignment="center"
        android:textColorHint="@color/darkGrey" />

    <EditText
        android:id="@+id/AuthPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/AuthEmail"
        android:layout_marginStart="75sp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGrey"
        android:ems="50"
        android:fontFamily="@font/font"
        android:hint="@string/EtPassword"
        android:textAlignment="center"
        android:textColorHint="@color/darkGrey" />

    <Button
        android:id="@+id/AuthAuth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/AuthPassword"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font"
        android:hint="@string/Auth"
        android:textSize="11dp"
        android:backgroundTint="@color/lightGrey"
        />

    <Button
        android:id="@+id/AuthReg"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/AuthPassword"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/font"
        android:hint="@string/Reg"
        android:textSize="11dp"
        android:backgroundTint="@color/lightGrey"
        />



</RelativeLayout>